# ChannelHoarder

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/migrations/: env.py
backend/app/routers/: auth.py  channels.py  dashboard.py  downloads.py  quick_download.py  settings.py  system.py  websocket.py
backend/app/services/: channel_service.py  diagnostics_service.py  download_service.py  import_service.py  metadata_service.py  naming_service.py  notification_service.py  scheduler_service.py  settings_service.py  storage_service.py  webhook_service.py  youtube_api_service.py  ytdlp_service.py
backend/app/tasks/: cleanup_unavailable.py  cookie_recovery.py  cookie_watcher.py  health_check.py  nfo_maintenance.py  pot_watchdog.py  process_queue.py  quality_upgrade.py  quick_download_cleanup.py  scan_channels.py  temp_cleanup.py  ytdlp_update.py
backend/app/utils/: cookie_utils.py  error_codes.py  file_utils.py  log_buffer.py  permissions.py  platform_utils.py  quality_utils.py  rate_limiter.py  renumber.py  scan_window.py  user_agents.py
backend/tests/: test_cookie_csrf.py  test_curlcffi_cooldown.py  test_download_isolation.py  test_health_hardening.py  test_impersonation.py  test_review_fixes.py  test_rumble_scrape.py  test_shorts_classification.py  test_sponsorblock.py  test_storage_cache.py  test_title_filter.py  test_unavailable_filter.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  (+1 more)
(+38 files in other folders)
